--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
     "@twa-dev/sdk": "^7.10.1",
+    "framer-motion": "^11.11.17",
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18"
