--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@telegram-apps/sdk": "^2.6.2",
     "@twa-dev/sdk": "^7.10.1",
     "framer-motion": "^11.11.17",
     "next": "14.2.18",
@@ -26,5 +27,12 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "eslintConfig": {
+    "extends": "react-app",
+    "rules": {
+      "@typescript-eslint/no-unused-vars": "off",
+      "no-unused-vars": "off"
+    }
   }
 }
