--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,10 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "telegram-web-app.js"],
+  "eslint": {
+    "rules": {
+      "@typescript-eslint/no-unused-vars": "off"
+    }
+  }
 }
